[package]
name = "deepgram_youtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
deepgram = "0.4.0"
dotenvy = "0.15.7"
futures = "0.3.30"
rusty_ytdl = "0.7.0"
tokio = "1.36.0"
